szinek valtoztatasa feketere

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 :root {
-    --a: #d8f3dc;
-    --b: #b7e4c7;
-    --c: #95d5b2;
-    --d: #74c69d;
-    --s: #52b788;
-    --f: #40916c;
+    --a: #181818;
+    --b: #181818;
+    --c: #181818;
+    --d:#181818;
+    --s: #2e302f;
+    --f: #181818;
     --base-color: #0f0f0f;  
     --h: #1b4332;
-    --text-color: #FFFFFF;
+    --text-color: #ffffff;
     --i: #081c15;
 }
 .link{
