--- a/css/styles.css
+++ b/css/styles.css
@@ -113,44 +113,12 @@ html {
     display: none !important;
 }
 
-.calorie-bg {
-    background-color: var(--f);
-}
-
-.progress-container {
-    position: relative;
-    width: 400px;
-} 
-
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 .btn-close {
     filter: invert(100%); 
-}
-
-.progress-circle {
-    width: 410px;
-    height: 410px;
-    border-radius: 50%;
-    background: conic-gradient(var(--b) 0deg, #ddd 0deg);
-}
-
-.progress-text {
-    position: absolute;
-    font-size: 18px;
-    font-weight: bold;
-    color: var(--text-color);
-    white-space: pre-line;
-
-}
-
-.progress-calorie {
-    width: 380px;
-    height: 380px;
-    border-radius: 50%;
-    background-color: var(--h);
 }
 
 .testalkat {
@@ -180,18 +148,8 @@ html {
     color: red;
 }
 
-.steps, .water {
-    background-color: var(--f);
-    width: 48%;
-}
-
 .workout-bg {
     background-color: var(--f) !important;
-}
-
-#waterbar {
-    width: 30px !important;
-    height: 150px !important;
 }
 
 #arrow {
@@ -978,6 +936,49 @@ map area {
     border-radius: 10px;
 }
 
+/*
+.calorie-bg {
+    background-color: var(--f);
+}
+
+.progress-container {
+    position: relative;
+    width: 400px;
+} 
+
+.progress-circle {
+    width: 410px;
+    height: 410px;
+    border-radius: 50%;
+    background: conic-gradient(var(--b) 0deg, #ddd 0deg);
+}
+
+.progress-text {
+    position: absolute;
+    font-size: 18px;
+    font-weight: bold;
+    color: var(--text-color);
+    white-space: pre-line;
+
+}
+
+.progress-calorie {
+    width: 380px;
+    height: 380px;
+    border-radius: 50%;
+    background-color: var(--h);
+}
+
+.steps, .water {
+    background-color: var(--f);
+    width: 48%;
+}
+
+#waterbar {
+    width: 30px !important;
+    height: 150px !important;
+}
+*/
 .calorie-bg, .steps, .water, .w-plan-bg {
     background-color: var(--f);
 }
@@ -1264,31 +1265,43 @@ map area {
         padding: 1rem 0rem;
         font-size: 1.9rem;
     }
-      #footer-oszlop1{
+    #footer-oszlop1{
           padding: 0.5rem 0;
-      }
-      #footer-oszlop2{
+    }
+    #footer-oszlop2{
           padding: 0.5rem 0;
-      }
-      #footer-oszlop3{
+    }
+    #footer-oszlop3{
           padding: 0.5rem 0 0.5rem 0rem;
-      }
-      #footer-icons{
+    }
+    #footer-icons{
           padding: 0 0 0 0.5rem;
-      }
+    }
 
-      #faq {
+    #faq {
           width: 35rem;
           margin: 0;
-      }
+    }
 
-      #faq h5{
+    #faq h5{
         font-size:1.1rem;
-      }
+    }
 
-      #bodymap .container{
+    #bodymap .container{
         grid-template-columns: 1fr;
-      }
+    }
+
+    .st_kep{
+        width: 200px;
+        height: 200px;
+        border-radius: 8px;
+    }
+
+    .serulttest {
+        width: 100%;
+        height: 210px;
+        border-radius: 8px;
+    }
 }
 @media only screen and (max-width: 700px) {
     .index_box h1{
@@ -1348,6 +1361,18 @@ map area {
     .index_alcim{
         font-size: 1.5rem;
     }
+
+    .st_kep{
+        width: 100%;
+        height: 250px;
+        border-radius: 8px;
+    }
+
+    .serulttest {
+        width: 100%;
+        height: 260px;
+        border-radius: 8px;
+    }
 }     
 @media only screen and (max-width: 550px) {
     .index_box h1{
@@ -1392,6 +1417,16 @@ map area {
         height: 2.5rem;
         margin: 1rem 0;
     }
+
+    #bodyfat-image{
+        width: 22rem;
+    }
+    
+    #bodyfat-image2{
+        width: 22rem;
+    }
+
+
 }
 @media only screen and (max-width: 480px) {
     .index_box{
@@ -1466,6 +1501,26 @@ map area {
         height: 2.5rem;
         margin: 1rem 0;
     }
+
+    #bodyfat-image{
+        width: 19.5rem;
+    }
+    
+    #bodyfat-image2{
+        width: 19.5rem;
+    }
+
+    .st_kep{
+        width: 100%;
+        height: 220px;
+        border-radius: 8px;
+    }
+
+    .serulttest {
+        width: 100%;
+        height: 230px;
+        border-radius: 8px;
+    }
 }
 @media only screen and (max-width: 430px) {
     .index_box h1{
@@ -1513,6 +1568,14 @@ map area {
         height: 2.5rem;
         margin: 1rem 0;
     }
+
+    #bodyfat-image{
+        width: 18.5rem;
+    }
+    
+    #bodyfat-image2{
+        width: 18.5rem;
+    }
 }
 @media only screen and (max-width: 392px) {
     .index_box h1{
@@ -1549,6 +1612,14 @@ map area {
         width: 8.5rem;
         height: 2.5rem;
         margin: 1rem 0;
+    }
+
+    #bodyfat-image{
+        width: 17.5rem;
+    }
+    
+    #bodyfat-image2{
+        width: 17.5rem;
     }
 }
 @media only screen and (max-width: 382px) {
