--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 :root {
     --a: #181818;
     --b: #181818;
-    --c: #181818;
+    --c: #d3d1d1;
     --d:#181818;
     --s: #2e302f;
     --f: #181818;
     --base-color: #0f0f0f;  
-    --h: #1b4332;
+    --h:#181818;
     --text-color: #ffffff;
     --i: #081c15;
 }
