--- a/css/styles.css
+++ b/css/styles.css
@@ -1293,15 +1293,17 @@ map area {
 
     .st_kep{
         width: 200px;
-        height: 200px;
+        height: 180px;
         border-radius: 8px;
     }
 
     .serulttest {
         width: 100%;
-        height: 210px;
+        height: 190px;
         border-radius: 8px;
     }
+
+
 }
 @media only screen and (max-width: 700px) {
     .index_box h1{
@@ -1363,6 +1365,48 @@ map area {
     }
 
     .st_kep{
+        width: 200px;
+        height: 180px;
+        border-radius: 8px;
+    }
+
+    .serulttest {
+        width: 100%;
+        height: 190px;
+        border-radius: 8px;
+    }
+}
+@media only screen and (max-width: 575px) {
+    .index_box{
+        max-width: 30rem;
+    }
+    .index_box h1{
+        font-size: 1.3rem;
+    }
+    .index_box p{
+        font-size: 0.9rem;
+    }
+    .index_box p:nth-child(2){
+        width: 22rem;
+    }
+    .index_box p:nth-child(1){
+        font-size: 0.8rem;
+    }
+    .index_box button {
+        width: 11rem;
+        height: 3.3em;
+    }
+    .index_focim{
+        font-size: 1.5rem;
+    }
+    .index_foszoveg{
+        font-size: 0.9rem;
+    }
+    .index_alcim{
+        font-size: 1.5rem;
+    }
+
+    .st_kep{
         width: 100%;
         height: 250px;
         border-radius: 8px;
@@ -1373,7 +1417,7 @@ map area {
         height: 260px;
         border-radius: 8px;
     }
-}     
+}          
 @media only screen and (max-width: 550px) {
     .index_box h1{
         font-size: 1.3rem;
@@ -1426,7 +1470,17 @@ map area {
         width: 22rem;
     }
 
+    .st_kep{
+        width: 100%;
+        height: 240px;
+        border-radius: 8px;
+    }
 
+    .serulttest {
+        width: 100%;
+        height: 250px;
+        border-radius: 8px;
+    }
 }
 @media only screen and (max-width: 480px) {
     .index_box{
@@ -1575,6 +1629,18 @@ map area {
     
     #bodyfat-image2{
         width: 18.5rem;
+    }
+
+    .st_kep{
+        width: 100%;
+        height: 210px;
+        border-radius: 8px;
+    }
+
+    .serulttest {
+        width: 100%;
+        height: 220px;
+        border-radius: 8px;
     }
 }
 @media only screen and (max-width: 392px) {
